# blackhole-simulation

./: Cargo.toml  LICENSE  README.md
scripts/: build-web.bat  build-web.ps1  build-web.sh
shader/: blackhole_main.frag  bloom_brightness_pass.frag  bloom_composite.frag  lens_flare.frag  passthrough.frag  tonemapping.frag
src/: app_state.rs  framebuffer.rs  gui.rs  lib.rs  main.rs  noise_gen.rs  render_pass.rs  render_utils.rs  renderer.rs  shader_utils.rs  texture.rs
web/: index.html
