[package]
name = "blackhole_rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "blackhole_web"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "blackhole_native"
path = "src/main.rs"

[dependencies]
winit = { version = "0.29.10", features = ["rwh_05"] }
glow = "0.13.1"
egui = "0.28"
egui_glow = { version = "0.28", features = ["winit"] }
glam = "0.24.2"
image = "0.24.9"
anyhow = "1.0"
byteorder = "1.5"
bytemuck = "1.14"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.31.3"
glutin-winit = "0.4.2"
raw-window-handle = "0.5.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.106"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "Node",
    "WebGl2RenderingContext",
    "Performance",
] }
